Documentation and language clean up

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,8 @@
         "Git Bash": {
             "source": "Git Bash"
         }
-    }
+    },
+    "cSpell.words": [
+        "roadmap"
+    ]
 }
