--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "time-series-library",
+  "author": "Niels Andersen",
+  "version": "0.1.0",
+  "main": "./lib/main.js",
+  "types": "./lib/main.d.ts",
   "devDependencies": {
     "@types/node": "^17.0.25",
     "mocha": "^9.2.2"
