--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "time-series-library",
+  "name": "@caliviking/time-series-library-js",
   "author": "Niels Andersen",
+  "description": "A library for managing and processing time series data.",
   "version": "0.1.0",
   "main": "./lib/main.js",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "types": "./lib/main.d.ts",
   "devDependencies": {
     "@types/node": "^17.0.25",
-    "mocha": "^9.2.2"
+    "mocha": "^9.2.2",
+    "typescript": "^4.6.4"
   },
   "scripts": {
+    "build": "npx tsc",
     "test": "mocha"
   }
 }
