--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "@caliviking/time-series-library-js",
   "author": "Niels Andersen",
   "description": "A library for managing and processing time series data.",
-  "version": "0.1.0",
-  "main": "./lib/main.js",
+  "version": "0.1.4",
+  "main": "./lib/index.js",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
-  "types": "./lib/main.d.ts",
   "devDependencies": {
     "@types/node": "^17.0.25",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.14.0",
     "mocha": "^9.2.2",
     "typescript": "^4.6.4"
   },
   "scripts": {
+    "lint": "eslint .",
     "build": "npx tsc",
     "test": "mocha"
   }
