--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@caliviking/time-series-library-js",
   "author": "Niels Andersen",
   "description": "A library for managing and processing time series data.",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "main": "./lib/index.js",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -11,13 +11,24 @@
     "@types/node": "^17.0.25",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
-    "eslint": "^8.14.0",
-    "mocha": "^9.2.2",
-    "typescript": "^4.6.4"
+    "eslint": "^8.16.0",
+    "mocha": "^10.0.0",
+    "npm": "^8.5.5",
+    "typescript": "^4.7.2"
   },
   "scripts": {
     "lint": "eslint .",
     "build": "npx tsc",
     "test": "mocha"
-  }
+  },
+  "keywords": [
+    "time series",
+    "iot",
+    "iiot",
+    "historian",
+    "machine learning",
+    "ai",
+    "analytics",
+    "signal processing"
+  ]
 }
