--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "@caliviking/time-series-library-js",
+  "name": "@nielsandersen/time-series-library-js",
   "author": "Niels Andersen",
   "description": "A library for managing and processing time series data.",
-  "version": "0.1.6",
+  "version": "0.1.8",
   "main": "./lib/index.js",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  },
+  "license": "CC-BY-NC-4.0",
   "devDependencies": {
     "@types/node": "^17.0.25",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
+    "browserify": "^17.0.0",
     "eslint": "^8.16.0",
     "mocha": "^10.0.0",
     "npm": "^8.5.5",
@@ -18,7 +17,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "build": "npx tsc",
+    "build": "npx tsc && browserify ./lib/index.js -o ./browser/bundle.js",
     "test": "mocha"
   },
   "keywords": [
