--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "@nielsandersen/time-series-library-js",
   "author": "Niels Andersen",
   "description": "A library for managing and processing time series data.",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "main": "./lib/index.js",
+  "type": "module",
   "license": "CC-BY-NC-4.0",
-  "browser": "./browser/bundle.js",
   "devDependencies": {
     "@types/node": "^17.0.25",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
-    "browserify": "^17.0.0",
     "eslint": "^8.16.0",
     "mocha": "^10.0.0",
     "npm": "^8.5.5",
@@ -18,7 +17,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "build": "npx tsc && browserify ./lib/index.js -o ./browser/bundle.js",
+    "build": "npx tsc",
     "test": "mocha"
   },
   "keywords": [
