--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "@nielsandersen/time-series-library-js",
+  "name": "time-series-library-js",
   "author": "Niels Andersen",
   "description": "A library for managing and processing time series data.",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "type": "module",
   "license": "CC-BY-NC-4.0",
   "devDependencies": {
+    "@types/mocha": "latest",
     "@types/node": "^17.0.25",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
+    "assert": "^2.0.0",
     "eslint": "^8.16.0",
-    "mocha": "^10.0.0",
+    "mocha": "latest",
     "npm": "^8.5.5",
+    "ts-node": "^10.8.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.7.2"
   },
   "scripts": {
-    "lint": "eslint .",
+    "lint": "tslint --project tsconfig.json",
     "build": "npx tsc",
-    "test": "mocha"
+    "test": "mocha",
+    "publish": "npm version patch && npm publish"
   },
   "keywords": [
     "time series",
