--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "assert": "^2.0.0",
-    "eslint": "^8.16.0",
+    "eslint": "latest",
     "mocha": "latest",
     "npm": "^8.5.5",
     "ts-node": "^10.8.0",
