Fixed remaining issues related to StatusType The build process had not deleted the lib folder, invalid test

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "lint": "tslint --project tsconfig.json",
-    "build": "npx tsc",
+    "build": "rm ./lib -fdr && npx tsc",
     "test": "mocha"
   },
   "keywords": [
