--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "time-series-library-js",
+  "name": "@nielsandersen/time-series-library-js",
   "author": "Niels Andersen",
   "description": "A library for managing and processing time series data.",
   "version": "0.1.35",
@@ -17,7 +17,6 @@
     "mocha": "latest",
     "npm": "^8.5.5",
     "ts-node": "^10.8.0",
-    "tslint": "^6.1.3",
     "typescript": "^4.7.2"
   },
   "scripts": {
