Implemented Vitest unit tests Removed mocha testing

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,85 @@
 node_modules/
 package-lock.json
 .vscode/launch.json
+coverage/tmp/coverage-6827-1656088941726-1.json
+coverage/tmp/coverage-6827-1656088941738-1.json
+coverage/tmp/coverage-6827-1656089158290-2.json
+coverage/tmp/coverage-6827-1656089158308-2.json
+coverage/tmp/coverage-6827-1656089186320-3.json
+coverage/tmp/coverage-6827-1656089186335-3.json
+coverage/tmp/coverage-6827-1656089223462-4.json
+coverage/tmp/coverage-6827-1656089223481-4.json
+coverage/tmp/coverage-6827-1656089314945-5.json
+coverage/tmp/coverage-6827-1656089314959-5.json
+coverage/tmp/coverage-6827-1656090408522-6.json
+coverage/tmp/coverage-6827-1656090408539-6.json
+coverage/tmp/coverage-6827-1656090479456-7.json
+coverage/tmp/coverage-6827-1656090479473-7.json
+coverage/tmp/coverage-6827-1656091017525-8.json
+coverage/tmp/coverage-6827-1656091017538-8.json
+coverage/tmp/coverage-6827-1656091069784-9.json
+coverage/tmp/coverage-6827-1656091069800-9.json
+coverage/tmp/coverage-6827-1656091125067-10.json
+coverage/tmp/coverage-6827-1656091125081-10.json
+coverage/tmp/coverage-6827-1656091680603-11.json
+coverage/tmp/coverage-6827-1656091680619-11.json
+coverage/tmp/coverage-6827-1656093271533-12.json
+coverage/tmp/coverage-6827-1656093271552-12.json
+coverage/tmp/coverage-6827-1656093302779-13.json
+coverage/tmp/coverage-6827-1656093302796-13.json
+coverage/tmp/coverage-6827-1656093381447-14.json
+coverage/tmp/coverage-6827-1656093381472-14.json
+coverage/tmp/coverage-6827-1656093455266-15.json
+coverage/tmp/coverage-6827-1656093455299-15.json
+coverage/tmp/coverage-6827-1656093499165-16.json
+coverage/tmp/coverage-6827-1656093499191-16.json
+coverage/tmp/coverage-6827-1656093655108-17.json
+coverage/tmp/coverage-6827-1656093655122-17.json
+coverage/tmp/coverage-6827-1656093740339-18.json
+coverage/tmp/coverage-6827-1656093740363-18.json
+coverage/tmp/coverage-6827-1656093767427-19.json
+coverage/tmp/coverage-6827-1656093767456-19.json
+coverage/tmp/coverage-6827-1656093792862-20.json
+coverage/tmp/coverage-6827-1656093792889-20.json
+coverage/tmp/coverage-6827-1656093810647-21.json
+coverage/tmp/coverage-6827-1656093810665-21.json
+coverage/tmp/coverage-6827-1656093963354-22.json
+coverage/tmp/coverage-6827-1656093963370-22.json
+coverage/tmp/coverage-6827-1656096286436-24.json
+coverage/tmp/coverage-6827-1656096286462-24.json
+coverage/tmp/coverage-6827-1656096287136-23.json
+coverage/tmp/coverage-6827-1656096287155-23.json
+coverage/base.css
+coverage/block-navigation.js
+coverage/datatype.ts.html
+coverage/favicon.png
+coverage/find-index.ts.html
+coverage/index-mode.ts.html
+coverage/index.html
+coverage/interpolation-method.ts.html
+coverage/prettify.css
+coverage/prettify.js
+coverage/severity.ts.html
+coverage/slice-mode.ts.html
+coverage/sort-arrow-sprite.png
+coverage/sorter.js
+coverage/time-series-path.ts.html
+coverage/time-series-vector.ts.html
+coverage/lib/datatype.js.html
+coverage/lib/find-index.js.html
+coverage/lib/index-mode.js.html
+coverage/lib/index.html
+coverage/lib/interpolation-method.js.html
+coverage/lib/severity.js.html
+coverage/lib/slice-mode.js.html
+coverage/lib/time-series-path.js.html
+coverage/lib/time-series-vector.js.html
+coverage/src/datatype.ts.html
+coverage/src/find-index.ts.html
+coverage/src/index-mode.ts.html
+coverage/src/index.html
+coverage/src/interpolation-method.ts.html
+coverage/src/severity.ts.html
+coverage/src/slice-mode.ts.html
+coverage/src/time-series-path.ts.html
+coverage/src/time-series-vector.ts.html
