--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
   "type": "module",
   "license": "CC-BY-NC-4.0",
   "devDependencies": {
-    "@types/mocha": "latest",
     "@types/node": "^17.0.25",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "assert": "^2.0.0",
+    "c8": "^7.11.3",
     "eslint": "latest",
-    "mocha": "latest",
     "npm": "^8.5.5",
     "ts-node": "^10.8.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "vitest": "^0.16.0"
   },
   "scripts": {
-    "lint": "tslint --project tsconfig.json",
+    "lint": "eslint --ext tsconfig.json",
     "build": "rm ./lib -fdr && npx tsc",
-    "test": "mocha"
+    "test": "npx vitest"
   },
   "keywords": [
     "time series",
